2002-07-05  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.h (cob_file): Renamed from cob_file_desc.
	* fileio.c: Updated.

2002-07-01  Keisuke Nishida  <knishida@netlab.jp>

	* screenio.c, screenio.h: New files.
	* Makefile.am: Add them.

2002-06-17  Keisuke Nishida  <knishida@netlab.jp>

	* call.c (cob_call_resolve): Don't set cob_status.

2002-06-11  Keisuke Nishida  <knishida@netlab.jp>

	* call.c (cob_resolve): Use COB_MODULE_EXT.

2002-06-11  Keisuke Nishida  <knishida@netlab.jp>

	* common.c, common.h (cob_alnum_desc): New variable.
	* common.c (cob_zero, cob_space, cob_high, cob_low, cob_quote): Use it.
	* move.c (cob_mem_move): Use it.

2002-06-11  Keisuke Nishida  <knishida@netlab.jp>

	* Allow cob_field.desc to be NULL.
	* common.h, common.c, move.c, numeric.c: Updated.

2002-06-11  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (COB_FIELD_IS_VALID): New macro.
	* fileio.c, strings.c: Use `COB_FIELD_IS_VALID'.

2002-06-11  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (cob_field): Field `size' moved from `cob_field_desc'.
	(COB_FIELD_SIZE, COB_FIELD_DATA): Removed.
	* common.c, fileio.c, move.c, numeric.c, strings.c, termio.c: Updated.

2002-06-04  Keisuke Nishida  <knishida@netlab.jp>

	* common.c, common.h (cob_config_compare): New function.
	* call.c (cob_init_call): Use `cob_config_compare'.

	* common.c (ding_on_error): New variable.
	(cob_init): Set ding_on_error from option "ding-on-error".
	(cob_runtime_error): Ring a bell only when "ding-on-error" is "yes".

2002-06-04  Keisuke Nishida  <knishida@netlab.jp>

	* support.h (cob_perform): Enclosed by do ... while (0).

2002-06-04  Keisuke Nishida  <knishida@netlab.jp>

	* Makefile.am (libcob_la_CFLAGS): -I$(top_srcdir).
	* call.c, common.c, fileio.c, move.c: Updated.

2002-05-31  Keisuke Nishida  <knishida@netlab.jp>

	* numeric.c, numeric.h (cob_div_remainder): Renamed from
	`cob_div_reminder' (typo fix).

2002-05-31  Keisuke Nishida  <knishida@netlab.jp>
